--- a/logolays/src/App.css
+++ b/logolays/src/App.css
@@ -25,3 +25,20 @@
 div {
   text-align: center;
 }
+
+.popup {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 8px 12px;
+  border-radius: 5px;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  white-space: nowrap;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
+.canvas2, .canvas3 {
+  position: relative;
