changed it once again..

--- a/logolays/src/App.css
+++ b/logolays/src/App.css
@@ -4,7 +4,7 @@
 .Canvass {
   height: 40vh;
   width: 80vw;
-  position: absolute;
+  position: relative;
   left: 14rem;
   top: 1rem;
 }
@@ -12,7 +12,7 @@
 .canvas2 {
   height: 20vh;
   width: 40vw;
-  position: absolute;
+  position: relative;
   left: 1rem;
   top: -15rem;
 }
@@ -20,7 +20,7 @@
 .canvas3 {
   height: 20vh;
   width: 40vw;
-  position: absolute;
+  position: relative;
   left: 29rem;
   top: -22.5rem;
 }
